<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.eg.sellersapplication.presentation.ui.fragments.seller.FragmentSeller">

    <TextView
        android:id="@+id/seller_text_makeBill"
        style="@style/SellersApplication.Text.Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/seller_text_makeBill"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/seller_text_pointSumBill"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/seller_text_pointSumBill"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/seller_text_makeBill"
        app:layout_constraintTop_toBottomOf="@+id/seller_text_makeBill" />

    <EditText
        android:id="@+id/seller_editText_sumOfBill"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/seller_editText_sumOfBill"
        app:layout_constraintStart_toStartOf="@+id/seller_text_pointSumBill"
        app:layout_constraintTop_toBottomOf="@+id/seller_text_pointSumBill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/seller_button"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cornerRadius="16dp"
        android:text="@string/seller_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>